[package]
name = "program-puzzle-prize"
version = "0.1.0"
authors = ["peg <ameba23@systemli.org>"]
license = "Unlicense"
edition = "2021"

[workspace]
members = ["generate-types", ".", "cli"]
resolver = "2"

# strip debug info since that makes up a major part of Wasm blobs, see Wasm's `twiggy`
[profile.release]
strip = "debuginfo"

# This is required to compile programs to a wasm module and for use in rust libs
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
entropy-programs-core={ git="https://github.com/entropyxyz/programs.git", tag="v0.10.0" }
generic-array = "0.14.7"
hex = "0.4.3"
schemars = {version = "0.8.16", optional = true}
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.117"

# These are used by `cargo component`
[package.metadata.component]
package = "entropy:program-puzzle-prize"

[package.metadata.component.dependencies]

# Metadata related to an Entropy program
[package.metadata.entropy-program]

# The docker image used to build this program
docker-image = "peg997/build-entropy-programs:version0.1"

# Configuration interface description
# interface-description = ""

[features]
std = ["schemars"]
